--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             <p>Lorem ipsum dolor sit amet, <span class="box">consectetur</span> adipisicing elit. Optio voluptatem iste sequi voluptatum velit. Amet
                 perspiciatis quaerat magni id, iste maxime, tempora ad rem.</p>
         </div>
+         <div class="blog3 third">
+            <h2>My Programming Blog 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio voluptatem iste sequi voluptatum velit. Amet
+                perspiciatis quaerat magni id, iste maxime, tempora ad rem.</p>
+        </div>
+        
+         <div class="blog3 third">
+            <h2>My Programming Blog 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio voluptatem iste sequi voluptatum velit. Amet
+                perspiciatis quaerat magni id, iste maxime, tempora ad rem.</p>
+        </div>
+        
         <div>
             <h2>CSS BOX MODEL</h2>
            <p>
